--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string name="x_axis_title">X Axis %1$d%%</string>
+    <string name="y_axis_title">Y Axis %1$d%%</string>
 </resources>
