--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="x_axis_title">X Axis %1$d%%</string>
     <string name="y_axis_title">Y Axis %1$d%%</string>
     <string name="app_background">App Background</string>
+    <string name="main_box_background">Main box background</string>
+    <string name="inner_box_background">Inner box background</string>
 </resources>
